welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:2: error: Missing closing brace `}' assumed here
var compteur = 0
^Poucet:18: error: ';' expected but 'else' found.
	else droite(); compteur=0; avance();
        ^Poucet:19: error: illegal start of simple expression
	while (!sortieTrouvee());
                                ^Poucet:27: error: 'while' expected but '}' found.
}
^